[tool.poetry]
name = "dnd_npcs"
version = "0.1.0"
description = "NPC tools for the telisar homebrew campaign setting"
authors = ["evilchili <evilchili@gmail.com>"]
license = "The Unlicense"
packages = [
    { include = 'npc' }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "latest"
rich = "latest"
dice = "latest"

[tool.poetry.dev-dependencies]
pytest = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
npc = "npc.cli:app"
